# render-backends

./: .gitignore  .gitmodules  CMakeLists.txt  RenderBackends.sln  main.cpp  premake5.lua
cmake/: FindGLFW3.cmake
lib/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
lib/glad/: CMakeLists.txt  glad.vcxproj
lib/glfw/: CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
src/: imgui.ini  main.cpp
src/backends/Base/: Core.h  Window.cpp  Window.h
src/backends/Core/: Base.h  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  PlatformDetection.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Window.cpp  Window.h
src/backends/Example/: Mesh.h  Model.h  Shader.h
src/backends/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGL_Context.cpp  OpenGL_Context.h  OpenGL_Image.cpp  OpenGL_Image.h  OpenGL_Renderer.cpp  OpenGL_Renderer.h
src/backends/Platform/: CMakeLists.txt
src/backends/Platform/Windows/: Windows_Window.cpp  Windows_Window.h
src/backends/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanRenderer.cpp  VulkanRenderer.h
